// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphite: show bar 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [
            filter: upd => upd !== undefined,
            update: {
              store: {
                state: foo | 1 | 11
              }
            },
            filter: upd => upd !== state
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                compute: Function,
                filter: Function
              ],
              next: [
                Node {
                  seq: [
                    filter: upd => upd !== undefined,
                    update: {
                      store: {
                        state: 12
                      }
                    },
                    filter: upd => upd !== state
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    },
    Node {
      seq: [
        compute: x => x,
        run: watcher
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            run: watcher
          ],
          next: [
            Node {
              seq: [
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    filter: upd => upd !== undefined,
                    update: {
                      store: {
                        state: false
                      }
                    },
                    filter: upd => upd !== state
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show bar 2`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [
            filter: upd => upd !== undefined,
            update: {
              store: {
                state: foo | 1 | 11
              }
            },
            filter: upd => upd !== state
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                compute: Function,
                filter: Function
              ],
              next: [
                Node {
                  seq: [
                    filter: upd => upd !== undefined,
                    update: {
                      store: {
                        state: 12
                      }
                    },
                    filter: upd => upd !== state
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [],
          next: [
            Node {
              seq: [
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    filter: upd => upd !== undefined,
                    update: {
                      store: {
                        state: foo | 1 | 11 | 101
                      }
                    },
                    filter: upd => upd !== state
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        compute: Function,
                        filter: Function
                      ],
                      next: [
                        Node {
                          seq: [
                            filter: upd => upd !== undefined,
                            update: {
                              store: {
                                state: 18
                              }
                            },
                            filter: upd => upd !== state
                          ],
                          next: [
                            Node {seq: [], next: []}
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store1 1`] = `
"Node {
  seq: [
    filter: upd => upd !== undefined,
    update: {
      store: {
        state: foo | 1 | 11 | 101
      }
    },
    filter: upd => upd !== state
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        compute: Function,
        filter: Function
      ],
      next: [
        Node {
          seq: [
            filter: upd => upd !== undefined,
            update: {
              store: {
                state: 18
              }
            },
            filter: upd => upd !== state
          ],
          next: [
            Node {seq: [], next: []}
          ]
        }
      ]
    }
  ]
}"
`;

exports[`graphite: show store2 1`] = `
"Node {
  seq: [
    filter: upd => upd !== undefined,
    update: {
      store: {
        state: 18
      }
    },
    filter: upd => upd !== state
  ],
  next: [
    Node {seq: [], next: []}
  ]
}"
`;

exports[`showcase: event foo 1`] = `
"Node {
  seq: [],
  next: [
    Node {
      seq: [
        compute: Function
      ],
      next: [
        Node {
          seq: [
            filter: upd => upd !== undefined,
            update: {
              store: {
                state: 3
              }
            },
            filter: upd => upd !== state
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                filter: Function,
                tap: {},
                tap: {},
                barrier: {
                  barrierID: 1,
                  priority: barrier
                },
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    filter: upd => upd !== undefined,
                    update: {
                      store: {
                        state: {
                          a: 3,
                          b: 6
                        }
                      }
                    },
                    filter: upd => upd !== state
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        compute: Function,
                        filter: Function
                      ],
                      next: [
                        Node {
                          seq: [
                            filter: upd => upd !== undefined,
                            update: {
                              store: {
                                state: 3
                              }
                            },
                            filter: upd => upd !== state
                          ],
                          next: [
                            Node {seq: [], next: []},
                            Node {
                              seq: [
                                compute: x => x,
                                run: watcher
                              ],
                              next: [
                                Node {
                                  seq: [
                                    compute: Function,
                                    run: watcher
                                  ],
                                  next: [
                                    Node {
                                      seq: [
                                        compute: Function
                                      ],
                                      next: [
                                        Node {
                                          seq: [
                                            filter: upd => upd !== undefined,
                                            update: {
                                              store: {
                                                state: false
                                              }
                                            },
                                            filter: upd => upd !== state
                                          ],
                                          next: [
                                            Node {seq: [], next: []}
                                          ]
                                        }
                                      ]
                                    }
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`showcase: mapped 1`] = `
"Node {
  seq: [
    filter: upd => upd !== undefined,
    update: {
      store: {
        state: 3
      }
    },
    filter: upd => upd !== state
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        compute: x => x,
        run: watcher
      ],
      next: [
        Node {
          seq: [
            compute: Function,
            run: watcher
          ],
          next: [
            Node {
              seq: [
                compute: Function
              ],
              next: [
                Node {
                  seq: [
                    filter: upd => upd !== undefined,
                    update: {
                      store: {
                        state: false
                      }
                    },
                    filter: upd => upd !== state
                  ],
                  next: [
                    Node {seq: [], next: []}
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;

exports[`showcase: store a 1`] = `
"Node {
  seq: [
    filter: upd => upd !== undefined,
    update: {
      store: {
        state: 3
      }
    },
    filter: upd => upd !== state
  ],
  next: [
    Node {seq: [], next: []},
    Node {
      seq: [
        filter: Function,
        tap: {},
        tap: {},
        barrier: {
          barrierID: 1,
          priority: barrier
        },
        compute: Function
      ],
      next: [
        Node {
          seq: [
            filter: upd => upd !== undefined,
            update: {
              store: {
                state: {
                  a: 3,
                  b: 6
                }
              }
            },
            filter: upd => upd !== state
          ],
          next: [
            Node {seq: [], next: []},
            Node {
              seq: [
                compute: Function,
                filter: Function
              ],
              next: [
                Node {
                  seq: [
                    filter: upd => upd !== undefined,
                    update: {
                      store: {
                        state: 3
                      }
                    },
                    filter: upd => upd !== state
                  ],
                  next: [
                    Node {seq: [], next: []},
                    Node {
                      seq: [
                        compute: x => x,
                        run: watcher
                      ],
                      next: [
                        Node {
                          seq: [
                            compute: Function,
                            run: watcher
                          ],
                          next: [
                            Node {
                              seq: [
                                compute: Function
                              ],
                              next: [
                                Node {
                                  seq: [
                                    filter: upd => upd !== undefined,
                                    update: {
                                      store: {
                                        state: false
                                      }
                                    },
                                    filter: upd => upd !== state
                                  ],
                                  next: [
                                    Node {seq: [], next: []}
                                  ]
                                }
                              ]
                            }
                          ]
                        }
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        }
      ]
    }
  ]
}"
`;
